# bazel-gazelle-sample

./: BUILD.bazel  Gopkg.toml  Makefile  WORKSPACE
cmd/sample/: BUILD.bazel  main.go
pkg/sample/: BUILD.bazel  sample.go  sample_test.go
