load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sample.go"],
    importpath = "github.com/mjhd-devlion/bazel-gazelle-sample/pkg/sample",
    visibility = ["//visibility:public"],
    deps = ["@com_github_k0kubun_pp//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["sample_test.go"],
    embed = [":go_default_library"],
)
